# egile-agent-core

./: .env.example  .gitignore  AGENT_UI_INTEGRATION.md  README.md  pyproject.toml
examples/: chatbot_with_agentui.py  sample_agent.py
src/egile_agent_core/: __init__.py  agent.py  config.py  exceptions.py
src/egile_agent_core/models/: __init__.py  agno_adapter.py  azure_openai.py  base.py  mistral.py  openai.py  xai.py
src/egile_agent_core/plugins/: __init__.py  base.py  loader.py
src/egile_agent_core/server/: __init__.py  agentui_routes.py  app.py  routes.py
src/egile_agent_core/utils/: __init__.py  logging.py
tests/: test_agent.py  test_models.py  test_plugins.py
