[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egile-agent-core"
version = "0.1.0"
description = "A turnkey AI agent framework with multi-provider LLM support and plugin architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Egile", email = "info@egile.ai" }
]
keywords = ["ai", "agent", "llm", "framework", "openai", "mistral", "xai", "azure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
mistral = ["mistralai>=0.0.7"]
all = [
    "mistralai>=0.0.7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
]

[project.scripts]
egile-server = "egile_agent_core.server:main"

[project.entry-points."egile_agent_core.plugins"]
# Example: my_plugin = "my_package.plugins:MyPlugin"

[project.urls]
Homepage = "https://github.com/egile/egile-agent-core"
Documentation = "https://github.com/egile/egile-agent-core#readme"
Repository = "https://github.com/egile/egile-agent-core"

[tool.hatch.build.targets.wheel]
packages = ["src/egile_agent_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
